--- a/webapp/home/labs/genome/data.yml
+++ b/webapp/home/labs/genome/data.yml
@@ -3,17 +3,17 @@ title: Data import and preparation
 tabs:
   - id: tools
     title: Tools
-    heading_html: >
+    heading_md: >
       Common tools are listed here, or search for more in the full tool panel to the left.
     content:
-      - title_html: Import data to Galaxy
-        description_html: >
+      - title_md: Import data to Galaxy
+        description_md: >
           <p>
             Standard upload of data to Galaxy, from your computer or from the web.
           </p>
         button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=upload1"
-      - title_html: <code>FastQC</code> - sequence quality reports
-        description_html: >
+      - title_md: <code>FastQC</code> - sequence quality reports
+        description_md: >
           <p>
             Before using your sequencing data, it's important to ensure that
             the data quality is sufficient for your analysis.
@@ -24,8 +24,8 @@ tabs:
               - bam
               - sam
         button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fdevteam%2Ffastqc%2Ffastqc"
-      - title_html: <code>FastP</code> - sequence quality reports, trimming & filtering
-        description_html: >
+      - title_md: <code>FastP</code> - sequence quality reports, trimming & filtering
+        description_md: >
           <p>
             Faster run than FastQC, this tool can also trim reads and filter by quality.
           </p>
@@ -33,8 +33,8 @@ tabs:
           - datatypes:
               - fastq
         button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fiuc%2Ffastp%2Ffastp"
-      - title_html: <code>NanoPlot</code> - visualize Oxford Nanopore data
-        description_html: >
+      - title_md: <code>NanoPlot</code> - visualize Oxford Nanopore data
+        description_md: >
           <p>
             A plotting suite for Oxford Nanopore sequencing data and alignments.
           </p>
@@ -44,8 +44,8 @@ tabs:
               - fasta
               - vcf_bgzip
         button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fiuc%2Fnanoplot%2Fnanoplot"
-      - title_html: <code>GenomeScope</code> - estimate genome size
-        description_html: >
+      - title_md: <code>GenomeScope</code> - estimate genome size
+        description_md: >
           <p>
             A set of metrics and graphs to visualize genome size and complexity prior to assembly.
           </p>
@@ -54,8 +54,8 @@ tabs:
               - tabular
             label: Output from <code>Meryl</code> or <code>Jellyfish histo</code>
         button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fiuc%2Fgenomescope%2Fgenomescope"
-      - title_html: <code>Meryl</code> - count kmers
-        description_html: >
+      - title_md: <code>Meryl</code> - count kmers
+        description_md: >
           <p>
             Prepare kmer count histogram for input to GenomeScope.
           </p>
@@ -66,12 +66,12 @@ tabs:
         button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fiuc%2Fmeryl%2Fmeryl"
   - id: workflows
     title: Workflows
-    heading_html: >
+    heading_md: >
       A workflow is a series of Galaxy tools that have been linked together to perform a specific analysis. You can use and customize the example workflows below.
       <a href="https://galaxyproject.org/learn/advanced-workflow/" target="_blank">Learn more.</a>
     content:
-      - title_html: Data QC
-        description_html: >
+      - title_md: Data QC
+        description_md: >
           <p>
             Report statistics from sequencing reads. <br> <br> Tools: <code>nanoplot</code> <code>fastqc</code> <code>multiqc</code>
           </p>
@@ -79,8 +79,8 @@ tabs:
         view_link: https://workflowhub.eu/workflows/222
         view_tip: View in WorkflowHub
         button_tip: Import to Galaxy AU
-      - title_html: Kmer counting to estimate genome size
-        description_html: >
+      - title_md: Kmer counting to estimate genome size
+        description_md: >
           <p>
             Estimates genome size and heterozygosity based on counts of kmers. <br> <br> Tools: <code>meryl</code> <code>genomescope</code>
           </p>
@@ -88,8 +88,8 @@ tabs:
         view_link: https://workflowhub.eu/workflows/223
         view_tip: View in WorkflowHub
         button_tip: Import to Galaxy AU
-      - title_html: Trim and filter reads
-        description_html: >
+      - title_md: Trim and filter reads
+        description_md: >
           <p>
             Trims and filters raw sequence reads according to specified settings. <br> <br> Tools: <code>fastp</code>
           </p>
@@ -100,63 +100,63 @@ tabs:
   - id: help
     title: Help
     content:
-      - title_html: How can I import my genomics data?
-        description_html: >
+      - title_md: How can I import my genomics data?
+        description_md: >
           <p>
             You can upload your data to Galaxy using the Upload tool from anywhere in Galaxy. Just look for the "Upload data" button at the top of the tool panel.
           </p>
-        button_html: More info
+        button_md: More info
         button_link: https://training.galaxyproject.org/training-material/topics/galaxy-interface/
-      - title_html: How can I subsample my data?
-        description_html: >
+      - title_md: How can I subsample my data?
+        description_md: >
           <p>
             We recommend subsampling large data sets to test tools and workflows. A useful tool is <code>seqtk_seq</code>, setting the parameter at "Sample fraction of sequences".
           </p>
-      - title_html: How can I import data from the BPA portal?
-        description_html: >
+      - title_md: How can I import data from the BPA portal?
+        description_md: >
           <p>
             BioPlatforms Australia allows data downloads via URL. Once you have generated one of these URLs in the BPA portal, you can import it into Galaxy using the "Fetch data" feature of the Upload tool.
           </p>
-        button_html: More info
+        button_md: More info
         button_link: https://australianbiocommons.github.io/how-to-guides/genome_assembly/hifi_assembly#in-depth-workflow-guide
-      - title_html: Can I upload sensitive data?
-        description_html: >
+      - title_md: Can I upload sensitive data?
+        description_md: >
           <p>
             No, do not upload personal or sensitive, such as human health or clinical data. Please see our <a href="/about#data-privacy">Data Privacy</a> page for definitions of sensitive and health-related information.
           </p>
           <p>
             Please also make sure you have read our <a href="/about#terms-of-service">Terms of Service</a>, which covers hosting and analysis of research data.
           </p>
-      - title_html: Is my data private?
-        description_html: >
+      - title_md: Is my data private?
+        description_md: >
           <p>
             Please read our <a href="/about#data-privacy">Privacy Policy</a> for information on your personal data and any data that you upload.
           </p>
-      - title_html: How can I increase my storage quota?
-        description_html: >
+      - title_md: How can I increase my storage quota?
+        description_md: >
           <p>
             Please submit a quota request if your Galaxy Australia account reaches its data storage limit. Requests are usually provisioned quickly if you provide a reasonable use case for your request.
           </p>
-        button_html: Request
+        button_md: Request
         button_link: /request/quota
-      - title_html: "Tutorial: Quality Control"
-        description_html: >
+      - title_md: "Tutorial: Quality Control"
+        description_md: >
           <p>
             Quality control and data cleaning is an essential first step in any NGS analysis. This tutorial will show you how to use and interpret results from <code>FastQC</code>, <code>NanoPlot</code> and <code>PycoQC</code>.
           </p>
-        button_html: Tutorial
+        button_md: Tutorial
         button_link: https://training.galaxyproject.org/training-material/topics/sequence-analysis/tutorials/quality-control/tutorial.html
-      - title_html: "Tutorial: introduction to Genomics and Galaxy"
-        description_html: >
+      - title_md: "Tutorial: introduction to Genomics and Galaxy"
+        description_md: >
           <p>
             This practical aims to familiarize you with the Galaxy user interface. It will teach you how to perform basic tasks such as importing data, running tools, working with histories, creating workflows, and sharing your work.
           </p>
-        button_html: Tutorial
+        button_md: Tutorial
         button_link: https://training.galaxyproject.org/training-material/topics/introduction/tutorials/galaxy-intro-strands/tutorial.html
-      - title_html: Galaxy Australia support
-        description_html: >
+      - title_md: Galaxy Australia support
+        description_md: >
           <p>
             Any user of Galaxy Australia can request support through an online form.
           </p>
-        button_html: Request support
+        button_md: Request support
         button_link: /request/support
