--- a/webapp/home/labs/proteomics/conversion_modification.yml
+++ b/webapp/home/labs/proteomics/conversion_modification.yml
@@ -3,11 +3,11 @@ title: MS file conversion
 tabs:
   - id: tools
     title: Tools
-    heading_html: >
+    heading_md: >
       Some example tools are listed here: you can also search for more in the full tool panel to the left.
     content:
-      - title_html: "<code>msconvert</code>"
-        description_html: >
+      - title_md: "<code>msconvert</code>"
+        description_md: >
           <p>
             Convert and/or filter mass spectrometry files.
           </p>
@@ -34,8 +34,8 @@ tabs:
               - ms2
             label: Output MS data
         button_link: "{{ galaxy_base_url }}/root?tool_id=toolshed.g2.bx.psu.edu/repos/galaxyp/msconvert/msconvert/"
-      - title_html: "<code>Thermo RAW file converter</code>"
-        description_html: >
+      - title_md: "<code>Thermo RAW file converter</code>"
+        description_md: >
           <p>
             Thermo RAW file converter.
           </p>
