--- a/webapp/home/labs/proteomics/data.yml
+++ b/webapp/home/labs/proteomics/data.yml
@@ -3,16 +3,16 @@ title: Data import
 tabs:
   - id: tools
     title: Tools
-    heading_html: "Some example tools are listed here: you can also search for more in the full tool panel to the left."
+    heading_md: "Some example tools are listed here: you can also search for more in the full tool panel to the left."
     content:
-      - title_html: "Import data to Galaxy"
-        description_html: "<p>Standard upload of data to Galaxy, from your computer or from the web.</p>"
+      - title_md: "Import data to Galaxy"
+        description_md: "<p>Standard upload of data to Galaxy, from your computer or from the web.</p>"
         button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=upload1"
   - id: help
     title: Help
     content:
-      - title_html: "Can I upload sensitive data?"
-        description_html: |
+      - title_md: "Can I upload sensitive data?"
+        description_md: |
           <p>
             No, do not upload personal or sensitive, such as human health or clinical data.
             Please see our
@@ -24,32 +24,32 @@ tabs:
             <a href="/about#terms-of-service">Terms of Service</a>,
             which covers hosting and analysis of research data.
           </p>
-      - title_html: "Is my data private?"
-        description_html: |
+      - title_md: "Is my data private?"
+        description_md: |
           <p>
             Please read our
             <a href="/about#data-privacy">Privacy Policy</a>
             for information on your personal data and any data that you upload.
           </p>
-      - title_html: "How can I increase my storage quota?"
-        description_html: |
+      - title_md: "How can I increase my storage quota?"
+        description_md: |
           <p>
             Please submit a quota request if your Galaxy Australia account reaches its data storage limit. Requests are usually provisioned quickly if you provide a reasonable use case for your request.
           </p>
         button_link: "/request/quota"
-        button_html: "Request"
-      - title_html: "Tutorial: Introduction to proteomics, protein identification, quantification and statistical modelling"
-        description_html: |
+        button_md: "Request"
+      - title_md: "Tutorial: Introduction to proteomics, protein identification, quantification and statistical modelling"
+        description_md: |
           <p>
             This practical aims to familiarize you with Galaxy for Proteomics, including theory, methods and software examples.
           </p>
         button_link: "https://training.galaxyproject.org/training-material/topics/proteomics/tutorials/introduction/slides.html#1"
-        button_html: "Tutorial"
-      - title_html: "Galaxy Australia support"
-        description_html: |
+        button_md: "Tutorial"
+      - title_md: "Galaxy Australia support"
+        description_md: |
           <p>
             Any user of Galaxy Australia can request support through an
             online form.
           </p>
         button_link: "/request/support"
-        button_html: "Request support"
+        button_md: "Request support"
