--- a/webapp/home/labs/proteomics/dda_standardised_tools.yml
+++ b/webapp/home/labs/proteomics/dda_standardised_tools.yml
@@ -3,11 +3,11 @@ title: DDA Standardised Tools
 tabs:
   - id: tools
     title: Tools
-    heading_html: >
+    heading_md: >
       Some example tools are listed here: you can also search for more in the full tool panel to the left.
     content:
-      - title_html: "<code>MaxQuant</code>"
-        description_html: >
+      - title_md: "<code>MaxQuant</code>"
+        description_md: >
           <p>
             MaxQuant is a quantitative proteomics software package designed for analyzing large mass-spectrometric data sets.
           </p>
@@ -21,8 +21,8 @@ tabs:
               - tabular
             label: Experimental design template
         button_link: "{{ galaxy_base_url }}/root?tool_id=toolshed.g2.bx.psu.edu/repos/galaxyp/maxquant/maxquant/"
-      - title_html: "<code>MSstats</code>"
-        description_html: >
+      - title_md: "<code>MSstats</code>"
+        description_md: >
           <p>
             Statistical relative protein significance analysis in DDA, SRM and DIA Mass Spectrometry.
           </p>
@@ -32,8 +32,8 @@ tabs:
               - csv
             label: Either the 10-column MSstats format or the outputs of spectral processing tools such as MaxQuant, OpenSWATH.
         button_link: "{{ galaxy_base_url }}/root?tool_id=toolshed.g2.bx.psu.edu/repos/galaxyp/msstats/msstats/"
-      - title_html: "<code>LFQ Analyst</code>"
-        description_html: >
+      - title_md: "<code>LFQ Analyst</code>"
+        description_md: >
           <p>
             Analyze and Visualize Label-Free Proteomics output from MaxQuant.
           </p>
@@ -48,24 +48,24 @@ tabs:
   - id: help
     title: Help
     content:
-      - title_html: "LFQ-Analyst: Manual"
-        description_html: >
+      - title_md: "LFQ-Analyst: Manual"
+        description_md: >
           <p>
             A detailed user manual for LFQ-Analyst.
           </p>
         button_link: "https://analyst-suite.monash-proteomics.cloud.edu.au/apps/lfq-analyst/LFQ-Analyst_manual.pdf"
-        button_html: "Manual"
-      - title_html: "MaxQuant and MSstats for the analysis of label-free data"
-        description_html: >
+        button_md: "Manual"
+      - title_md: "MaxQuant and MSstats for the analysis of label-free data"
+        description_md: >
           <p>
             Learn how to use MaxQuant and MSstats for the analysis of label-free shotgun (DDA) data.
           </p>
         button_link: "https://training.galaxyproject.org/training-material/topics/proteomics/tutorials/maxquant-msstats-dda-lfq/tutorial.html"
-        button_html: "Tutorial"
-      - title_html: "Galaxy Australia support"
-        description_html: >
+        button_md: "Tutorial"
+      - title_md: "Galaxy Australia support"
+        description_md: >
           <p>
             Any user of Galaxy Australia can request support through an online form.
           </p>
         button_link: "/request/support"
-        button_html: "Request support"
+        button_md: "Request support"
