--- a/webapp/home/labs/proteomics/dia_standardised_tools.yml
+++ b/webapp/home/labs/proteomics/dia_standardised_tools.yml
@@ -3,11 +3,11 @@ title: DIA Standardised Tools
 tabs:
   - id: tools
     title: Tools
-    heading_html: >
+    heading_md: >
       Some example tools are listed here: you can also search for more in the full tool panel to the left.
     content:
-      - title_html: "<code>MSstats</code>"
-        description_html: >
+      - title_md: "<code>MSstats</code>"
+        description_md: >
           <p>
             Statistical relative protein significance analysis in DDA, SRM and DIA Mass Spectrometry.
           </p>
@@ -20,24 +20,24 @@ tabs:
   - id: help
     title: Help
     content:
-      - title_html: "Galaxy Australia support"
-        description_html: >
+      - title_md: "Galaxy Australia support"
+        description_md: >
           <p>
             Any user of Galaxy Australia can request support through an online form.
           </p>
         button_link: "/request/support"
-        button_html: "Request support"
-      - title_html: "DIA Analysis using OpenSwathWorkflow"
-        description_html: >
+        button_md: "Request support"
+      - title_md: "DIA Analysis using OpenSwathWorkflow"
+        description_md: >
           <p>
             Learn how to analyse HEK-Ecoli spike-in DIA data in Galaxy, understand DIA data principles and characteristics, and use OpenSwathworkflow to analyze HEK-Ecoli spike-in DIA data.
           </p>
         button_link: "https://usegalaxy.org.au/training-material/topics/proteomics/tutorials/DIA_Analysis_OSW/tutorial.html"
-        button_html: "Tutorial"
-      - title_html: "Library Generation for DIA Analysis"
-        description_html: >
+        button_md: "Tutorial"
+      - title_md: "Library Generation for DIA Analysis"
+        description_md: >
           <p>
             Learn how to generate a spectral library from data dependent acquisition (DDA) MS data, understand DIA data principles and characteristics, and optimize and refine a spectral library for the analysis of DIA data.
           </p>
         button_link: "https://usegalaxy.org.au/training-material/topics/proteomics/tutorials/DIA_lib_OSW/tutorial.html"
-        button_html: "Tutorial"
+        button_md: "Tutorial"
