--- a/webapp/home/labs/proteomics/base.yml
+++ b/webapp/home/labs/proteomics/base.yml
@@ -30,9 +30,9 @@ footer_md: templates/footer.html
 #   1. Relative to this file URL
 #   2. Full URL to fetch globally centralized content
 sections:
-  - data.yml
-  - conversion_modification.yml
-  - database_searching.yml
-  - dda_standardised_tools.yml
-  - dia_standardised_tools.yml
-  - dda_tmt.yml
+  - sections/data.yml
+  - sections/conversion_modification.yml
+  - sections/database_searching.yml
+  - sections/dda_standardised_tools.yml
+  - sections/dia_standardised_tools.yml
+  - sections/dda_tmt.yml
