--- a/webapp/home/labs/proteomics/sections/conversion_modification.yml
+++ b/webapp/home/labs/proteomics/sections/conversion_modification.yml
@@ -44,6 +44,6 @@ tabs:
               - thermo.raw
             label: Thermo RAW file
         button_link: "{{ galaxy_base_url }}/root?tool_id=toolshed.g2.bx.psu.edu/repos/galaxyp/thermo_raw_file_converter/thermo_raw_file_converter/"
-  - id: help
-    title: Help
-    content: []
+  # - id: help
+  #   title: Help
+  #   content: []
