--- a/webapp/home/labs/genome/assembly.yml
+++ b/webapp/home/labs/genome/assembly.yml
@@ -85,7 +85,7 @@ tabs:
     content:
       subsections:
         - id: pacbio
-          title: TSI assembly workflows - PacBio HiFi data
+          title: TSI assembly workflows - PacBio HiFi or Nanopore data
           content:
             - title_md: About these workflows
               description_md: >
@@ -132,6 +132,20 @@ tabs:
                   label: Primary assembly contigs
               button_link: "{{ galaxy_base_url }}/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=237"
               view_link: https://workflowhub.eu/workflows/237
+              view_tip: View in WorkflowHub
+              button_tip: Import to Galaxy Australia
+            - title_md: Nanopore genome assembly using Flye
+              description_md: >
+                <p>
+                  Assemble a genome using Nanopore reads.
+                </p>
+              inputs:
+                - datatypes:
+                    - fastqsanger
+                    - fastq
+                  label: Nanopore reads
+              button_link: "{{ galaxy_base_url }}/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=1114"
+              view_link: https://workflowhub.eu/workflows/1114
               view_tip: View in WorkflowHub
               button_tip: Import to Galaxy Australia
             - title_md: Genome assessment post-assembly
